# snowframe

./: README.md  pyproject.toml  test_snowframe.ipynb
examples/: analysis.sql  basic_usage.py  notebook_demo.ipynb
snowframe/: __init__.py  cli.py  core.py  magic.py
tests/: test_basic.py
